<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add">Add</string>
    <string name="invalid_token">The token specified was invalid!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="no_keys">No OTP keys installed.</string>
    <string name="add_token">Add Token</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="interval">Interval</string>
    <string name="counter">Counter</string>
    <string name="issuer">Issuer</string>
    <string name="account">Account</string>
    <string name="id">ID</string>
    <string name="secret">Secret</string>
    <string name="type">Type</string>
    <string name="algorithm">Algorithm</string>
    <string name="digits">Digits</string>
    <string name="save">Save</string>
    <string name="code_copied">Code copied to clipboard.</string>

    <string name="about_freeotp">About FreeOTP+</string>
    <string name="about_version">FreeOTP+ Version %1$s (%2$d)</string>
    <string name="about_copyright">© 2013 - Red Hat, Inc., et al.\n© 2016 - Liberty</string>
    <string name="about_license">FreeOTP+ is licensed under %1$s.</string>
    <string name="about_website">For more information, see our %s.</string>
    <string name="about_feedback">We welcome your feedback:&lt;br/&gt;• %1$s&lt;br/&gt;• %2$s</string>
    <string name="about_icons">Some icons used by this application are reproduced from work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>
    <string name="link_apache2" translatable="false">&lt;a href=&quot;http://www.apache.org/licenses/LICENSE-2.0.html&quot;&gt;Apache 2.0&lt;/a&gt;</string>
    <string name="about_token_image">The token thumbnails token_image_*.xml in token-images library are from andOTP under &lt;a href=&quot;https://github.com/andOTP/andOTP/blob/master/LICENSE.txt&quot;&gt;MIT License&lt;/a&gt;. Copyright © 2017-2020 Jakob Nixdorf. &lt;andotp@shadowice.org&gt; Copyright © 2015 Bruno Bierbaumer</string>

    <string name="error_camera_open">Error while opening camera!</string>

    <string name="delete_summary">This is your last chance: if you delete this token, it will be gone forever. It will not be disabled on the server.</string>
    <string name="delete_question">Delete this token?</string>
    <string name="import_text">Import</string>
    <string name="export_text">Export</string>
    <string name="export_succeeded_text">Export succeeded.</string>
    <string name="import_succeeded_text">Import succeeded</string>
    <string name="import_json_failed_text">Failed to import JSON. The file is malformed.</string>
    <string name="import_key_uri_failed_text">Failed to import key uri file. The file is malformed.</string>
    <string name="invalid_token_uri_received">Invalid token URI received</string>
    <string name="import_json_file">Import JSON file</string>
    <string name="import_json_file_warning">All the current tokens will be cleared and overwritten after importing.</string>
    <string name="camera_permission_denied_text">Camera permission denied</string>
    <string name="ok_text">Ok</string>
    <string name="cancel_text">Cancel</string>
    <string name="import_json_format">Import JSON format</string>
    <string name="import_key_uri_format">Import key URI format</string>
    <string name="export_json_format">Export JSON format</string>
    <string name="export_key_uri_format">Export key URI format</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="add_token_success">The token was successfully added</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="require_authentication">Require authentication</string>
    <string name="quit_and_lock">Quit and lock</string>
    <string name="authentication_succeeded">Authentication succeeded!</string>
    <string name="authentication_error">Authentication error:</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_dialog_title">Authentication required</string>
    <string name="authentication_dialog_subtitle">Please use biometric or PIN to authenticate FreeOTP+</string>
    <string name="unable_to_authenticate">Unable to authenticate. Do you have screen lock enabled with PIN / biometric enabled?</string>

    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="issuer_hint" translatable="false">example@example.com</string>
    <string name="label_hint" translatable="false">eb40924b-1d13-4807-9a76-30eb7ffa7eba</string>
    <string name="remove_user_token_image">Remove user token image</string>
    <string name="fail_to_add_image">Fail to add image</string>
    <string name="launch_file_browser_failure">Unable to launch system\'s file browser. It is likely an OS issue.</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="show_token">Show Token</string>
    <string name="screenshot_mode">Screenshot mode</string>
    <string name="launch_with_screenshot_enabled">Launch with screenshot enabled</string>
    <string name="token_details">Token details</string>
    <string name="share_to_other_apps">Share to other apps</string>

    <string name="onb_title">Install Blue TOTP on Windows</string>
    <string name="onb_step1">To use Blue TOTP, you need a Windows PC that supports Bluetooth.</string>
    <string name="onb_step2">Open following Link on your Windows PC, to install the additional software:</string>
    <string name="onb_shortlink">ubisys.org/2fa</string>
    <string name="onb_dont_show_again">Don\'t show this hint again</string>
    <string name="onb_continue">Continue</string>

    <string name="ext_title">Before you can start a setup:</string>
    <string name="ext_step_1">Enable Bluetooth on this Smartphone.</string>
    <string name="ext_step_2">Open the Blue TOTP Extension on your Chrome Browser at your Windows-PC.</string>
    <string name="ext_step_3">There you should click on \"Search device\" and connect to this phone.</string>
    <string name="ext_step_4">Visit a website, where you want to setup two factor authentication.</string>
    <string name="ext_step_5">Open the extension and start the setup.</string>
    <string name="ext_ok">Ok</string>

    <string name="preference_file_key">com.example.freeotpplusbluetotp.preference_file</string>
    <string name="show_onb_key">show_hint_key</string>
    <string name="cant_create_new_profile_text">Can\'t create new profile.</string>
    <string name="ble_permissions_denied_text">This app needs Bluetooth permissions to connect with your computer!</string>
    <string name="notify_permissions_denied">This app needs the notification permission to let you confirm requests!</string>
    <string name="stopped_ble_service">Disabled Bluetooth radio (saving power)</string>
    <string name="started_ble_service">Enabled Bluetooth radio</string>
    <string name="title_activity_connect_extension">connectExtensionActivity</string>
    <string name="disconnected">Disconnected from browser extension.</string>
    <string name="connected">Connected to browser extension.</string>

    <string name="init_token_text_1">Enter the token into the website where you are setting up two factor authentication.</string>
    <string name="init_token_text_2">Token</string>
    <string name="init_token_warning">Check if the domain of your current website is identical to the following:</string>
    <string name="init_token_ok_button">Finish</string>
    <string name="init_token_expires">Token expires in </string>

    <string name="notify_foreground">Blue TOTP is active</string>
    <string name="notify_totp_req_title">Authentication Request</string>
    <string name="notify_totp_req_title_public">Login at</string>
    <string name="notify_totp_req_text">for</string>
    <string name="notify_totp_req_confim">Confirm</string>
    <string name="notify_totp_req_deny">Deny</string>

    <string name="totp_req_title">Authentication Request</string>
    <string name="totp_req_text">Are you trying to login?</string>
    <string name="totp_req_domain">Website:</string>
    <string name="totp_req_username">Username:</string>
    <string name="totp_req_confrim">Yes</string>
    <string name="totp_req_deny">No</string>
</resources>
