<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/totpReqUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/totp_req_username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/totpReqText"
        app:layout_constraintTop_toBottomOf="@+id/totpReqDomainLabel" />

    <TextView
        android:id="@+id/totpReqTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/totp_req_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hyphenationFrequency="full" />

    <TextView
        android:id="@+id/totpReqText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/totp_req_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totpReqTitle" />

    <Button
        android:id="@+id/totpReqConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:padding="15dp"
        android:text="@string/totp_req_confrim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/totpReqDeny"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/totpReqDeny"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:padding="15dp"
        android:text="@string/totp_req_deny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/totpReqConfirm"
        app:layout_constraintTop_toTopOf="@+id/totpReqConfirm" />

    <TextView
        android:id="@+id/totpReqDomainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/totp_req_domain"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/totpReqText"
        app:layout_constraintTop_toBottomOf="@+id/totpReqText" />

    <TextView
        android:id="@+id/totpReqDomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="example.com"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/totpReqUsernameLabel"
        app:layout_constraintTop_toTopOf="@+id/totpReqDomainLabel" />

    <TextView
        android:id="@+id/totpReqUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="user_1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/totpReqUsernameLabel"
        app:layout_constraintTop_toTopOf="@+id/totpReqUsernameLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>