<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/initTokenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/inittoken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="123456"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tokenExplain" />

    <TextView
        android:id="@+id/tokenExplain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/init_token_text_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tokenTitle" />

    <TextView
        android:id="@+id/tokenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/init_token_text_2"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="124dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/init_token_ok_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/initTokenExpires"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="21dp"
        android:text="@string/init_token_expires"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/initTokenProgress"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/initTokenProgress" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/initTokenProgress"
        android:layout_width="72dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:indeterminate="false"
        android:scaleX="-1"
        android:max="1000"
        android:progress="750"
        app:indicatorSize="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/initTokenExpires"
        app:layout_constraintTop_toBottomOf="@+id/inittoken" />

    <TextView
        android:id="@+id/initTokenSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="30"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/initTokenProgress"
        app:layout_constraintEnd_toEndOf="@+id/initTokenProgress"
        app:layout_constraintStart_toStartOf="@+id/initTokenProgress"
        app:layout_constraintTop_toTopOf="@+id/initTokenProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>